--- a/pyvis_html.ipynb
+++ b/pyvis_html.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,33 +55,11 @@
     "        net.add_edge(source, target, title=title)\n",
     "\n",
     "    # Set options for better visualization and enable physics initially\n",
-    "    net.set_options(\"\"\"\n",
-    "    var options = {\n",
-    "    \"nodes\": {\n",
-    "        \"font\": {\n",
-    "        \"size\": 14,\n",
-    "        \"face\": \"arial\",\n",
-    "        \"strokeWidth\": 0,\n",
-    "        \"align\": \"center\"\n",
-    "        }\n",
-    "    },\n",
-    "    \"edges\": {\n",
-    "        \"smooth\": true\n",
-    "    },\n",
-    "    \"physics\": {\n",
-    "        \"barnesHut\": {\n",
-    "        \"gravitationalConstant\": -80000,\n",
-    "        \"centralGravity\": 0.3,\n",
-    "        \"springLength\": 95,\n",
-    "        \"springConstant\": 0.04,\n",
-    "        \"damping\": 0.09,\n",
-    "        \"avoidOverlap\": 0\n",
-    "        }\n",
-    "    }\n",
-    "    }\n",
-    "    \"\"\")\n",
+    "    net.show_buttons(filter_=['physics'])\n",
+    "\n",
     "\n",
     "    # Save and display the network\n",
+    "    \n",
     "    net.show(path.replace('.graphml', '.html'))"
    ]
   },
@@ -97,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
